# crab-vault

./: .env  .gitignore  Cargo.toml  LICENSE  RAODMAP.md  README.md  crab-vault.toml
.github/workflows/: rust.yml
crates/crab-vault-auth/: Cargo.toml
crates/crab-vault-auth/src/: error.rs  lib.rs
crates/crab-vault-auth/tests/: decoder_test.rs  encoder_test.rs  integration_test.rs  jwt_test.rs
crates/crab-vault-engine/: Cargo.toml
crates/crab-vault-engine/data_test/overwrite_object/bucket/: file.txt
crates/crab-vault-engine/meta_test/list_buckets/buckets/: bucket1.json  bucket2.json
crates/crab-vault-engine/meta_test/object_lifecycle/objects/my-bucket/: obj2.json
crates/crab-vault-engine/meta_test/put_get_bucket/buckets/: test-bucket.json
crates/crab-vault-engine/src/: error.rs  fs.rs  lib.rs
crates/crab-vault-engine/tests/: fs_data.rs  fs_meta.rs
crates/crab-vault-logger/: Cargo.toml
crates/crab-vault-logger/src/: json.rs  lib.rs  pretty.rs
crates/crab-vault-utils/: Cargo.toml
crates/crab-vault-utils/src/: ansi.rs  bitmap.rs  color.rs  lib.rs
docs/: API.md  配置文件.md  错误处理.md
src/: app_config.rs  cli.rs  color.rs  error.rs  http.rs  lib.rs  logger.rs  main.rs  server.rs  storage.rs  util.rs
src/api/: data.rs  handler.rs  meta.rs  mod.rs  util.rs
src/app_config/: auth.rs  config.rs  data.rs  logger.rs  meta.rs  mod.rs  server.rs  util.rs
src/cli/: config.rs  jwt.rs  mod.rs  run.rs
src/common/: errors.rs
src/error/: api.rs  auth.rs  cli.rs  engine.rs  fatal.rs  mod.rs
src/errors/: cli.rs  mod.rs
src/http/: api.rs  auth.rs  extractor.rs  middleware.rs  mod.rs  server.rs
src/http/api/: handler.rs  mod.rs  response.rs  util.rs
src/http/extractor/: auth.rs  meta.rs
src/http/middleware/: auth.rs
src/logger/: json.rs  pretty.rs
src/storage/: fs.rs  mod.rs
