[package]
name = "crab-vault"
version = "0.2.5"
edition = "2024"
description = "An object storage service written in rust."
license = "MIT"
repository = "https://github.com/sylvan-lyon/crab-vault.git"

[workspace]
members = [
    "crates/crab-vault-auth",
    "crates/crab-vault-engine"
]

[workspace.dependencies]
axum = { version = "0.8", features = ["macros"] }
base64 = "0.22.1"
bytes = { version = "1.10", features = ["serde"] }
chrono = { version = "0.4.41", features = ["serde"] }
clap = { version = "4.5.45", features = ["derive"] }
config = "0.15.14"
glob = "0.3.3"
jsonwebtoken = "9.3.1"
rand = "0.9.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.142"
sha2 = "0.10.9"
thiserror = "2.0.16"
tokio = { version = "1.47", features = ["full"] }
toml_edit = "0.23.4"
tower = { version = "0.5", features = ["tokio"] }
tower-http = { version = "0.6", features = ["trace", "timeout", "cors", "limit", "normalize-path"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.18", features = ["v4", "serde"] }

[dependencies]
axum = { workspace = true }
base64 = { workspace = true }
bytes = { workspace = true }
chrono.workspace = true
clap = { workspace = true }
config = { workspace = true }
glob = { workspace = true }
jsonwebtoken = { workspace = true }
rand = { workspace = true }
serde.workspace = true
serde_json = { workspace = true }
sha2 = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
toml_edit = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }
#
crab-vault-auth = { path = "crates/crab-vault-auth", version = "0.2.5" }
crab-vault-engine = { path = "crates/crab-vault-engine", version = "0.2.5" }
