[package]
name = "crab-vault-auth"
version = "0.2.12"
edition = "2024"
description = "The auth sdk for crab vault."
license = "MIT"
repository = "https://github.com/sylvan-lyon/crab-vault.git"

[features]
default = ["client-side"]
"client-side" = []
"server-side" = []

[dependencies]
axum.workspace = true
base64.workspace = true
chrono.workspace = true
clap.workspace = true
glob.workspace = true
jsonwebtoken.workspace = true
rand.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
validator.workspace = true
