[package]
name = "crab-vault-engine"
version = "0.2.9"
edition = "2024"
description = "The engine of crab vault"
license = "MIT"
repository = "https://github.com/sylvan-lyon/crab-vault.git"

[dependencies]
axum.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
