[package]
name = "crab-vault-logger"
version = "0.2.10"
edition = "2024"
description = "The logger of crab vault"
license = "MIT"
repository = "https://github.com/sylvan-lyon/crab-vault.git"

[dependencies]
clap.workspace = true
chrono.workspace = true
serde_json.workspace = true
serde.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
#
crab-vault-utils = { path = "../crab-vault-utils", version = "0.2.10"}
